# pulumi_playground_k8s

./: .gitignore  .pre-commit-config.yaml  Makefile  Pulumi.cicd.yaml  Pulumi.dev.yaml  Pulumi.staging.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: logic-tests.yml
docs/: architecture.md  contributing.md  getting-started.md  gitops.md  operations.md  paas.md  secrets.md  services.md  troubleshooting.md
gitops/charts/service/: Chart.yaml  values.yaml
gitops/charts/service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  service.yaml
gitops/clusters/dev/registry/: api.yaml  chaos.yaml  nginx.yaml  worker.yaml
gitops/clusters/staging/registry/: nginx.yaml
paas/: __init__.py  gitops.py
paas/argocd/: __init__.py  service.json
paas/ingress/: __init__.py  service.json
paas_platform/: __init__.py  clusters.py  container.py  defaults.py  labels.py  resources.py  service.py  targets.py
scripts/: generate_gitops.py
services/: __init__.py
services/api/: service.json
services/litmus/: dev.json  service.json
services/nginx/: dev.json  service.json  staging.json
services/worker/: service.json
tests/: test_pulumi_mocks.py
