[project]
name = "pulumi-playground-k8s"
version = "0.1.0"
description = "A small Pulumi-powered PaaS baseline for deploying services to Kubernetes clusters."
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=4.3.0,<6.0.0",
    "pulumi>=3.193.0,<4.0.0",
    "pulumi-kubernetes>=4.23.0,<5.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0,<5.0.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
